# akkurim-server

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: deploy.yml
app/: config.py  initial_data.py  main.py  utils.py
app/alembic/: env.py
app/alembic/versions/: 184957ceb4f1_change_to_schema_per_tenant_model.py  54ce1946d93c_create_initial_schema.py  7099f92a0135_add_club_table_and_profile_pic_for_.py  b0096cbae295_add_autotimestamps_on_creation.py  f68da2df206b_change_to_schema_per_tenant_model.py
app/api/v1/: admin.py  athlete.py  guardian.py  remote_config.py
app/auth/: supertokens_config.py
app/core/: base_schema.py  config.py  database.py  exceptions.py  json_response.py  logging.py  observation_middleware.py  utils.py
app/core/auth/: auth_supertokens_config.py  dependecies.py  schemas.py
app/core/remote_config/: exceptions.py  router.py  schemas.py  service.py
app/core/shared/: base_schema.py  database.py  exceptions.py  join_tables.py  router.py  schemas.py  service.py
app/core/sse/: broadcast.py  router.py  schemas.py
app/core/sync/: router.py  service.py  sync_config.py
app/core/utils/: default_service.py  fastapi_cbv.py  sql_utils.py
app/db/: database.py
app/features/athlete/: router.py  schemas.py  service.py  utils.py
app/features/attendance/: schemas.py
app/features/guardian/: exceptions.py  router.py  schemas.py  service.py
app/schemas/: athlete.py  guardian.py  remote_config.py
app/scripts/: pre_start.sh  run.sh
tests/: test_utils.py
(+9 files in other folders)
